# pl32lib-ng

./: .gitignore  Makefile  README.md  compile  compile-libs  config-template.conf  configure  custom.conf  defaults.conf  export-vars  meson.build  pl32-test.c  shell-check  sources.conf  temp-test.c
config/: shared.cfg  static.cfg
docs/: components.rst  pl32lib-ng.rst  readme.rst
docs/pl32-file/: plfclose.rst  plfile.rst  plfopen.rst  plftop.rst  readme.rst
docs/pl32-memory/: macros.rst  plarray.html  plarray.rst  plmt.rst  plmtalloc.rst  plmtfreearray.rst  plmtinit.rst  plmtmanage.rst  plmtmemamnt.rst  plmtmemerror.rst  plmtstop.rst  plpointer.rst  readme.rst  typedefs.rst
docs/pl32-token/: plparser.rst  plstrtok.rst  pltokenize.rst  readme.rst
extras/include/: pl32-shell.h
extras/src/: pl32-shell.c
include/: .pl32-file.h.swp  .pl32-memory.h.swp  .pl32-shell.h.swp  .pl32-token.h.swp  meson.build  pl32-calc.h  pl32-file.h  pl32-math.h  pl32-memory.h  pl32-parse.h  pl32-shell.h  pl32-string.h  pl32-term.h  pl32-token.h  pl32-types.h  pl32-ustring.h  pl32.h  pl32.hpp
src/: .pl32-file.c.swp  .pl32-memory.c.swp  .pl32-shell.c.swp  .pl32-token.c.swp  meson.build  pl32-calc.c  pl32-file.c  pl32-math.c  pl32-memory.c  pl32-parse.c  pl32-posix.c  pl32-shell.c  pl32-string.c  pl32-term.c  pl32-token.c  pl32-types.c  pl32-ustring.c
tests/: .pl32-file-test.c.swp  .strtok-test.c.swp  core  pl32-file-test.c  pl32-memory-test.c  pl32-shell-test.c  strtok-test  strtok-test.c
